# neurosym

./: README.md  pyproject.toml
neurosym/: __init__.py  bashtool.py  blocks.py
